	Use 'const' for input pointers/string constants (except in one
	case where noted - potential bug).
	(constituent_cnt) change confusing empty 'for' loop to 'while' as
	written in the holy text of Kernighan&Pike.
	(cvt_uscores_to_sp) add parentheses around assignment to make GCC
	happy.
	(mk_compound_word_list) remove unused variables 'k', 'l',
	'head_compound_word_cnt'.
	(time_align_init) pass proper parameters to phone_to_id().
	(add_triphone) remove unused variable 'j'.
	(expand_phone_graph) remove unused variable 'k'.
	(add_word) remove unused variable 'j'.
	return something.
	(mk_phone_graph) remove unused variables 'j', 'l', 'cur_word_id',
	'cur_word', 'sp', 'fchar'.
	(print_phone_graph) make this 'void'.
	(mk_models) remove unused variables 'i', 'j', 'k'.
	(evaluate_active_models_internal) remove unused variables 's1',
	's2', 's3', 's4'
	(prune_active_models) remove unused variable 'j'.
	(print_active_models) dead code, conditionalized out.
	(va_traverse_back_trace) move to before where it's used.
	(time_align_word_sequence_init) remove unused variable 'j'.
	(build_word_segment) remove unused variable 'utt_id'.
	(build_phone_segment) likewise.
	(time_align_word_sequence) remove unused variables 'j', 'k'.
	move declaration of 'i' to smallest scope.
	remove redundant extern declaration.
	(time_align_seg_output) remove unused variable 'i'.
	(time_align_best_word_string) remove unused variable 'i'.
	chage comparison to assignment.
	* src/libsphinx2/util.c: Use "" instead of <>.
	* src/libsphinx2/uttproc.c: Use #ifdef instead of #if.
	Use "" instead of <>.
	Remove now-redundant extern declarations.
	Add a bunch of extern declarations (should go in internal
	header...)
	Use prototypes.
	Use const for input pointers.
	(write_results) move 'dumplatdir' to smallest scope.
	(uttproc_init) pass proper number of arguments to E_FATAL.
	(uttproc_begin_utt) leftover_cep is (float *) not (float **) now.
	(uttproc_align) remove unused variable 'fp'.
		